css/healthmate.css
body {
	background-color: #EEECE7;
	font-size: 14px;
}

#nav-container {
	background-color: #04262F;
	border-bottom: 1px solid rgba(255,255,255,.3);
    margin-bottom: 0;
}

#nav-container #name {
	color: #43CC94;
	font-family: 'Raleway', sans-serif;
	font-weight: 800;
	margin: 0;
}

#nav-container .navbar-toggle {
    padding-top: 8px;
    font-size: 16px;
    color: #fff;
    outline: 0;
    border: 0;
    background-color: #04262F;
}

#nav-container .navbar-toggle:focus,
#nav-container .navbar-toggle:active {
    outline: 0;
    background-color: #04262F;
}

#nav-container .top-nav-collapse {
     border-bottom: 1px solid rgba(255,255,255,.3);
}

#nav-container li a {
	color: #43CC94;
	font-size: 1.2em;
	font-family: 'Raleway', sans-serif;
	font-weight: 300;
}

#nav-container li a:hover {
	color: #FFFFFF;
	background-color: #04262F;
}

#page-content {
	padding-top: 80px;
}

#proj-name {
	text-align: center;
    color: #43CC94;
    font-size: 2.85em;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;		
}

#proj-desc {
	text-align: center;
	font-size: 1.57em;
	font-family: 'Raleway', sans-serif;
    font-weight: 300;
} 

hr {
	margin-top: 30px;
    background-color: #43CC94;
    color: #43CC94;
    height: 2px;
    border: 0 none;
}

#proj-content {
	margin-top: 40px;
}

#proj-content p {
	font-family: 'Raleway', sans-serif;
    font-weight: 400;
	margin: 5px 0 0 0;
}

.proj-section {
    color: #43CC94;
    font-size: 1.7em;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
}

.project-images {
	margin-top: 20px;
}

.mid-images {
	padding-left: 5px;
	padding-right: 5px;	
}

.middle-images {
	margin-bottom: 20px;
}

#to-top {
    text-align: center;
    margin-bottom: 10px;
}

#to-top a {
    text-decoration: none;
    color: #43CC94;
    font-weight: 400;
}

#to-top p {
    margin-top: 20px;
}

#to-top a:hover {
    color: #04262F;
}

/* Mobile portrait */
@media (min-width:320px) and (max-width:480px){
    #nav-container #name {font-size: 1.75em;}
    #proj-name {font-size: 2.0em;}
    #to-top #right-hr hr {margin-top: 20px;}
    .bot-images {margin-top: 20px;}
    .right-images {margin-top: 20px;}
}

/* Mobile landscape */
@media (min-width:481px) and (max-width:640px){
    #nav-container #name {font-size: 1.75em;}
    #proj-name {font-size: 2.4em;}
    #to-top #right-hr hr {margin-top: 20px;}
    .bot-images {margin-top: 20px;}
    .right-images {margin-top: 20px;}
}

/* Tablet and desktop */
@media (min-width:641px) {
    #nav-container #name {font-size: 2em; padding-left: 0;}
    #proj-name {font-size: 2.85em;}
    #to-top #left-hr {padding-right: 0;}
    #to-top #right-hr {padding-left: 0;}
    #to-top #right-hr hr {margin-top: 30px;}
    .left-images {padding-right: 5px;}
    .right-images {padding-left: 5px;}
    .bot-images {margin-top: 10px;}
}

